CharacterService tests added
